# makepad-element

./: Cargo.toml
examples/element_gallery/src/: main.rs
examples/element_zoo/src/: main.rs
examples/element_zoo/src/pages/: avatar_page.rs  badge_page.rs  button_page.rs  card_page.rs  check_box_page.rs  chip_page.rs  dialog_page.rs  divider_page.rs  fab_page.rs  header_page.rs  icon_page.rs  image_page.rs  input_page.rs  linear_progress_page.rs  list_item_page.rs  mod.rs  overlay_page.rs  pricing_card_page.rs  rating_page.rs  search_bar_page.rs  skeleton_page.rs  slider_page.rs  social_icon_page.rs  speed_dial_page.rs  switch_page.rs  tab_page.rs  text_page.rs  tile_page.rs  tooltip_page.rs
src/: lib.rs
src/components/: avatar.rs  badge.rs  blur_view.rs  button.rs  card.rs  chat_bubble.rs  check_box.rs  chip.rs  clickable_view.rs  curved_label.rs  dialog.rs  divider.rs  dropdown.rs  fab.rs  fade_view.rs  fading_bar.rs  filler.rs  header.rs  icon.rs  image.rs  input.rs  linear_progress.rs  list_item.rs  markdown.rs  mod.rs  overlay.rs  popup_menu.rs  pricing_card.rs  rating.rs  search_bar.rs  skeleton.rs  slider.rs  social_icon.rs  speed_dial.rs  staggered_grid.rs  svg.rs  switch.rs  tab.rs  text.rs  tile.rs  (+1 more)
src/theme/: colors.rs  colors_dark.rs  colors_light.rs  font.rs  live_theme.rs  mod.rs  spacing.rs  typography.rs
tests/: component_tests.rs
